agregué la creación de billeteras

--- a/mis_gastos/billetera/templates/billetera.html
+++ b/mis_gastos/billetera/templates/billetera.html
@@ -1,3 +1,10 @@
+<nav>
+    <ul>
+        <li><a href="/billetera/crear_billetera">crear billetera</a></li>
+    </ul>
+</nav>
+
+
 <h1>Mis billeteras:</h1>
 <ul>
 {% for billetera in mis_billeteras %}
