--- a/mis_gastos/billetera/templates/billetera_actual.html
+++ b/mis_gastos/billetera/templates/billetera_actual.html
@@ -1,3 +1,10 @@
+<nav>
+    <ul>
+        <li><a href="/billetera">mis billeteras</a></li>
+    </ul>
+</nav>
+
+
 <h1>{{nombre_billetera}}</h1>
 
 <ul>
