--- a/mis_gastos/billetera/templates/ingresos.html
+++ b/mis_gastos/billetera/templates/ingresos.html
@@ -1,3 +1,10 @@
+<nav>
+    <ul>
+        <li><a href="/billetera">mis billeteras</a></li>
+        <li><a href="/billetera/{{billetera.pk}}">billetera actual</a></li>
+    </ul>
+</nav>
+
 <p>Estás visualizando los ingresos de {{nombre_billetera}}</p>
 
 <ul>
