--- a/mis_gastos/billetera/templates/gastos.html
+++ b/mis_gastos/billetera/templates/gastos.html
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="/billetera">mis billeteras</a></li>
         <li><a href="/billetera/{{billetera.pk}}">billetera actual</a></li>
+        <li><a href="/billetera/{{billetera.pk}}/gastos/crear_gasto">Crear gasto</a></li>
     </ul>
 </nav>
 
