--- a/mis_gastos/billetera/templates/ingresos.html
+++ b/mis_gastos/billetera/templates/ingresos.html
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="/billetera">mis billeteras</a></li>
         <li><a href="/billetera/{{billetera.pk}}">billetera actual</a></li>
+        <li><a href="/billetera/{{billetera.pk}}/ingresos/crear_ingreso">Crear ingreso</a></li>
     </ul>
 </nav>
 
