Añadí tema de categorías

--- a/mis_gastos/billetera/templates/categoria_actual.html
+++ b/mis_gastos/billetera/templates/categoria_actual.html
@@ -9,4 +9,9 @@
     </ul>
     <h1>{{billetera.nombre_billetera}}</h1>
     <h2>Estás en la categoría {{categoria.nombre_categoria}}</h2>
+
+    <ul>
+        <li><a href="/billetera/{{billetera.pk}}/{{categoria.pk}}/ingresos">Ingresos</a></li>
+        <li><a href="/billetera/{{billetera.pk}}/{{categoria.pk}}/gastos">Gastos</a></li>
+    </ul>
 </body>
