--- a/mis_gastos/billetera/templates/crear_ingreso.html
+++ b/mis_gastos/billetera/templates/crear_ingreso.html
@@ -1,5 +1,6 @@
 <body>
     <h1>Estás en la página para crear ingresos</h1>
+    <h2>Categoría: {{categoria.nombre_categoria}}</h2>
 
     <form method = 'POST'>
         {% csrf_token %}
