--- a/mis_gastos/billetera/templates/billetera.html
+++ b/mis_gastos/billetera/templates/billetera.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li><a href="/billetera/crear_billetera">crear billetera</a></li>
+        <li><a href={% url 'crear_billetera' %}>crear billetera</a></li>
     </ul>
 </nav>
 
