--- a/mis_gastos/billetera/templates/gastos.html
+++ b/mis_gastos/billetera/templates/gastos.html
@@ -1,3 +1,4 @@
+{% load static %}
 <nav>
     <ul>
         <li><a href="/billetera">mis billeteras</a></li>
@@ -7,6 +8,7 @@
 </nav>
 
 <p>Estás visualizando los gastos de {{nombre_billetera}}</p>
+<img src="{% static 'imagen_gastos.png' %}" alt="">
 <p>Categoría: {{categoria.nombre_categoria}}</p>
 <ul>
 {% for gasto in gastos_categoria %}
