--- a/mis_gastos/billetera/templates/ingresos.html
+++ b/mis_gastos/billetera/templates/ingresos.html
@@ -1,12 +1,25 @@
-<nav>
-    <ul>
-        <li><a href="/billetera">mis billeteras</a></li>
-        <li><a href="/billetera/{{billetera.pk}}">billetera actual</a></li>
-        <li><a href="/billetera/{{billetera.pk}}/{{categoria.pk}}/ingresos/crear_ingreso">Crear ingreso</a></li>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static '/styles/main.css' %}">
+    <title>ingresos</title>
+</head>
+<body>
+
+<nav class='navbar'>
+    <ul class='nav_container'>
+        <li class="li1"><a href="/billetera">mis billeteras</a></li>
+        <li class="li2"><a href="/billetera/{{billetera.pk}}">billetera actual</a></li>
+        <li class="li3"><a href="/billetera/{{billetera.pk}}/{{categoria.pk}}/ingresos/crear_ingreso">Crear ingreso</a></li>
     </ul>
 </nav>
 
 <p>Estás visualizando los ingresos de {{nombre_billetera}}</p>
+<img src="{% static 'imagen_ingresos.png' %}" alt="">
 <p>Categoría: {{categoria.nombre_categoria}}</p>
 
 <ul>
@@ -14,3 +27,5 @@
 <li>{{ingreso.descripcion_ingreso}} = {{ingreso.valor}}</li>
 {% endfor %}
 </ul>
+</body>
+</html>
