--- a/mis_gastos/billetera/templates/crear_ingreso_gasto.html
+++ b/mis_gastos/billetera/templates/crear_ingreso_gasto.html
@@ -1,10 +1,10 @@
 <body>
-    <h1>Estás en la página para crear ingresos</h1>
+    <h1>Estás en la página para crear {{categoria.tipo_categoria}}</h1>
     <h2>Categoría: {{categoria.nombre_categoria}}</h2>
 
     <form method = 'POST'>
         {% csrf_token %}
-        {{formulario_crear_ingreso}}
+        {{formulario_crear_ingreso_gasto}}
         <button>submit</button>
     </form>
 </body>
