--- a/mis_gastos/billetera/templates/billetera_actual.html
+++ b/mis_gastos/billetera/templates/billetera_actual.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar">
         <ul class="nav_container">
-            <li id="crear"><a href="/billetera">mis billeteras</a></li>
+            <li class="li1"><a href="/billetera">mis billeteras</a></li>
         </ul>
     </nav>
     
     
     <div class="contenido">
         <h1 class="titulo">{{nombre_billetera}}</h1>
-        <p>Tu saldo disponible es: {{billetera.total_dinero}}</p>
+        <p>Tu saldo disponible es: ${{billetera.total_dinero}}</p>
         <a href="{{billetera_pk}}/ingresos">Visualizar ingresos</a>
         <a href="{{billetera_pk}}/gastos">Visualizar gastos</a>
     </div>
