--- a/mis_gastos/billetera/templates/crear_billetera.html
+++ b/mis_gastos/billetera/templates/crear_billetera.html
@@ -1,17 +1,32 @@
-<nav>
-    <ul>
-        <li><a href="/billetera">mis billeteras</a></li>
-    </ul>
-</nav>
-
-
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static '/styles/main.css' %}">
+    <title>crear_billetera</title>
+</head>
 <body>
-    <h1>Esta es la página para crear tus nuevas billeteras:</h1>
-    <form method="POST">
-        {% csrf_token %} 
-        {{form}}
-        <button>
-            Save
-        </button>
-    </form>
+
+    <nav class="navbar">
+        <ul class="nav_container">
+            <li class="li1"><a href="/billetera">mis billeteras</a></li>
+        </ul>
+    </nav>
+    
+    
+    <div class="contenido">
+        <h1 id="titulo_crear_billetera">Crea tu nueva billetera...</h1>
+        <form method="POST">
+            {% csrf_token %} 
+            {{form}}
+            <button>
+                Save
+            </button>
+        </form>
+    </div>
+
 </body>
+</html>
