--- a/mis_gastos/billetera/templates/crear_billetera.html
+++ b/mis_gastos/billetera/templates/crear_billetera.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar">
         <ul class="nav_container">
-            <li class="li1"><a href="/billetera">mis billeteras</a></li>
+            <li class="li1"><a href="/billetera">Billeteras</a></li>
         </ul>
     </nav>
     
