--- a/mis_gastos/billetera/templates/billetera.html
+++ b/mis_gastos/billetera/templates/billetera.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul class="nav_container">
-            <li id="crear"><a href={% url 'crear_billetera' %}>crear billetera</a></li>
+            <li class="crear"><a target="_blank" href={% url 'crear_billetera' %}>Crear billetera</a></li>
         </ul>
     </nav>
     
