--- a/mis_gastos/billetera/templates/categoria_actual.html
+++ b/mis_gastos/billetera/templates/categoria_actual.html
@@ -12,21 +12,15 @@
 
 <nav class='navbar'>
     <ul class='nav_container'>
-        <li class="li1"><a href="/billetera">mis billeteras</a></li>
-        <li class="li2"><a href="/billetera/{{billetera.pk}}">billetera actual</a></li>
-        <li class="li3" id="crear"><a href="/billetera/{{billetera.pk}}/{{tipo_categoria}}/{{categoria.pk}}/crear_ingreso_gasto">Crear {{categoria.tipo_categoria}}</a></li>
+        <li class="li1"><a href="/billetera">Billeteras</a></li>
+        <li class="li2"><a href="/billetera/{{billetera.pk}}">Billetera actual</a></li>
+        <li class="crear"><a target="_blank" href="/billetera/{{billetera.pk}}/{{tipo_categoria}}/{{categoria.pk}}/crear_ingreso_gasto">Crear {{categoria.tipo_categoria}}</a></li>
     </ul>
 </nav>
 
-<div class="contenido">
+<div class="contenido" >
     <h2>Categoría: {{categoria.nombre_categoria}}</h2>
-    {% if tipo_categoria == 'ingresos' %}
-    <img class="imagen_gasto_ingreso"src="{% static 'imagen2ingresos.png' %}" alt="imagen_ingresos">
-    {% elif tipo_categoria == 'gastos' %}
-    <img class="imagen_gasto_ingreso"src="{% static 'imagen_gastos.png' %}" alt="imagen_gastos">
-    {% endif %}
     <div class="divisor">
-        
     </div>
     <h3 class="subtitulo">{{categoria.tipo_categoria}} de {{billetera.nombre_billetera}}</h3>
     <table>
@@ -43,6 +37,7 @@
         </tr>
         {% endfor %}
     </table>
+    
 </div>
 
 
