--- a/mis_gastos/billetera/templates/crear_categoria.html
+++ b/mis_gastos/billetera/templates/crear_categoria.html
@@ -1,10 +1,23 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static '/styles/main.css' %}">
+    <title>crear_categoria</title>
+</head>
 <body>
-    <h1>Billetera {{billetera.nombre_billetera}}</h1>
-    <h3>Estás en la página para crear categorías de {{tipo_categoria}}</h3>
-    <form method="POST">
-        {% csrf_token %}
-        {{formulario_crear_categoria}}
-        <button>Submit</button>
-    </form>
-    
+    <div class="contenido">
+        <h1>Billetera {{billetera.nombre_billetera}}</h1>
+        <h3>Estás en la página para crear categorías de {{tipo_categoria}}</h3>
+        <form method="POST">
+            {% csrf_token %}
+            {{formulario_crear_categoria}}
+            <button>Submit</button>
+        </form>
+    </div>
 </body>
+</html>
+    
