--- a/mis_gastos/billetera/templates/crear_billetera.html
+++ b/mis_gastos/billetera/templates/crear_billetera.html
@@ -22,7 +22,7 @@
         <form method="POST">
             {% csrf_token %} 
             {{form}}
-            <button>
+            <button id="boton_crear_billetera">
                 Save
             </button>
         </form>
