--- a/mis_gastos/ahorros/templates/crear_ahorro.html
+++ b/mis_gastos/ahorros/templates/crear_ahorro.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static '/styles/estilos_ahorros.css' %}">
     <title>crear_ahorro</title>
 </head>
 <body>
-    <h1>Estás en la vista para crear ahorros.</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{formulario_crear_ahorro}}
-        <button>save</button>
-    </form>
+
+    <div class="contenido" id="formulario_crear_ahorro">
+        <h1 id="titulo_crear_ahorro">Crea tu ahorro...</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{formulario_crear_ahorro}}
+            <button class="boton_crear">save</button>
+        </form>
+    </div>
+
 </body>
 </html>
