--- a/mis_gastos/billetera/templates/billetera.html
+++ b/mis_gastos/billetera/templates/billetera.html
@@ -13,7 +13,7 @@
         <ul class="nav_container">
             <li class="li1"><a href="/ahorros">Ahorros</a></li>
             <li class="li2"><a class="link_pagina_actual"href="/billetera">Billeteras</a></li>
-            <li class="crear"><a target="_blank" href={% url 'crear_billetera' %}>Crear billetera</a></li>
+            <li class="crear"><a href={% url 'crear_billetera' %}>Crear billetera</a></li>
         </ul>
     </nav>
     
