--- a/mis_gastos/billetera/templates/categoria_actual.html
+++ b/mis_gastos/billetera/templates/categoria_actual.html
@@ -14,7 +14,7 @@
     <ul class='nav_container'>
         <li class="li1"><a href="/billetera">Billeteras</a></li>
         <li class="li2"><a href="/billetera/{{billetera.pk}}">Billetera actual</a></li>
-        <li class="crear"><a target="_blank" href="/billetera/{{billetera.pk}}/{{tipo_categoria}}/{{categoria.pk}}/crear_ingreso_gasto">Crear {{categoria.tipo_categoria}}</a></li>
+        <li class="crear"><a href="/billetera/{{billetera.pk}}/{{tipo_categoria}}/{{categoria.pk}}/crear_ingreso_gasto">Crear {{categoria.tipo_categoria}}</a></li>
     </ul>
 </nav>
 
